# utengine

./: .gitignore  CMakeLists.txt  conanfile.txt  premake5.lua
Sandbox/: main.cpp
Sandbox/includes/: ActorTest.h  ObjTest.h  ObjTestB.h  ObjTestC.h  ObjTestD.h  SecondTileMapTest.h  SecondaryTileMapTest.h  TileMapTest.h  TileMapTestB.h
Sandbox/src/: ActorTest.cpp  ObjTest.cpp  ObjTestB.cpp  ObjTestC.cpp  ObjTestD.cpp  SecondTileMapTest.cpp  SecondaryTileMapTest.cpp  TileMapTest.cpp  TileMapTestB.cpp  main.cpp
dependencies/SOIL2/: soil2-debug.lib
dependencies/SOIL2/win32/: soil2.lib
examples/test/: CMakeLists.txt  ObjTest.cpp  ObjTest.h  main.cpp
includes/: Action.h  Actor.h  AnimatedSprite.h  AssetHandler.h  BatchHandler.h  BinaryReader.h  BinaryWriter.h  Buffer.h  CMakeLists.txt  Camera.h  Collidable.h  CollisionHandler.h  Common.h  DialogBox.h  DialogueHandler.h  Door.h  DoorHandler.h  Fader.h  Font.h  Game.h  IndexBuffer.h  Input.h  Interactable.h  Logger.h  ObjTestB.h  Object.h  Player.h  Rectangle9Slice.h  Resources.h  RichText.h  Room.h  SaveHandler.h  Shader.h  SoundLoader.h  Sprite.h  Terminal.h  TextWriter.h  Texture.h  TextureHandler.h  TileMap.h  (+6 more)
src/: Actor.cpp  AnimatedSprite.cpp  AssetHandler.cpp  BatchHandler.cpp  BinaryReader.cpp  BinaryWriter.cpp  Buffer.cpp  CMakeLists.txt  Camera.cpp  Collidable.cpp  CollisionHandler.cpp  Common.cpp  DialogBox.cpp  DialogueHandler.cpp  Door.cpp  DoorHandler.cpp  Fader.cpp  Font.cpp  Game.cpp  IndexBuffer.cpp  Input.cpp  Interactable.cpp  Logger.cpp  ObjTestB.cpp  Object.cpp  Player.cpp  Rectangle9Slice.cpp  Resources.cpp  RichText.cpp  Room.cpp  SaveHandler.cpp  Shader.cpp  SoundLoader.cpp  Sprite.cpp  Terminal.cpp  TextWriter.cpp  TextureHandler.cpp  TileMap.cpp  VertexArray.cpp  VertexBuffer.cpp  (+5 more)
